# mysql-python

./: README.md  pyproject.toml
mysql_python/: __main__.py  setting.py
