[tool.poetry]
name = "mysql-python"
version = "0.1.0"
description = ""
authors = ["YuHori <YuHori.Main@gmail.com>"]
readme = "README.md"
packages = [{include = "mysql_python"}]

[tool.poetry.dependencies]
python = "^3.9"
sqlalchemy = "^2.0.5.post1"
pymysql = "^1.0.2"
cryptography = "^39.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
